--- a/style.css
+++ b/style.css
@@ -28,6 +28,19 @@
     border: 2;
     border-radius: 5px;
 }
+.register-box{
+    background-color: rgba(74, 184, 184, 0.089);
+    width: 300px;
+    height: 300px;
+    margin:auto;
+    border-radius: 10px;
+    box-shadow: 3px 3px 6px black;
+}
+.register-form input{
+    padding: 5px;
+    border: 2;
+    border-radius: 5px;
+}
 .btn{
     padding: 8px;
     border-radius: 10px;
