--- a/style.css
+++ b/style.css
@@ -49,3 +49,26 @@
     background-color: rgba(0, 162, 255, 0.274);
     padding: 10px;
 }
+.logo{
+    background-color: white;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.nav-box{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+nav ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+nav a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
