--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    cursor: pointer;
 }
 
 .nav1 a{
@@ -51,7 +52,7 @@
 }
 .login-form input{
     padding: 5px;
-    border: 2;
+    border: none;
     border-radius: 5px;
     outline: none;
 }
@@ -79,6 +80,7 @@
 .btn:hover{
     background-color: rgba(0, 162, 255, 0.274);
     padding: 10px;
+    cursor: pointer;
 }
 .logo{
     font-style: italic;
@@ -295,7 +297,7 @@
 
 .image-thumbnails {
     display: flex;
-    transition: transform 1.3s ease;
+    transition: transform 1.1s ease;
     gap: 10px;
 }
 
